--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.notifye</groupId>
-	<artifactId>botengine-ai-client</artifactId>
+	<artifactId>botengine-ai</artifactId>
 	<version>0.1.2-SNAPSHOT</version>
 
 	<properties>
